%%{init: {'theme': 'base', 'themeVariables': {'primaryColor': '#00838F', 'primaryTextColor': '#fff', 'primaryBorderColor': '#006064', 'lineColor': '#555555', 'secondaryColor': '#E3F2FD', 'tertiaryColor': '#F3E5F5'}}}%%
classDiagram
    class StatementExportStrategy {
        <<interface>>
        +targetFormat() ConversionTargetFormat
        +engine() ConversionEngine
        +export(statement BankStatement) GeneratedBankingFile
        +key() StatementExportStrategyKey
    }

    class StatementExportStrategyFactory {
        -strategies Map~Key, Strategy~
        +getStrategy(fmt, eng) StatementExportStrategy
        +hasStrategy(fmt, eng) boolean
    }

    class AbstractMtProwideStrategy {
        <<abstract>>
        #formatSwiftAmount(amount) String
        #formatBalanceLine(stmt, bal, date) String
        #formatField61(tx) String
        #formatField86(tx) String
        #truncate(value, max) String
    }

    class InternalToMt940ProwideStrategy {
        +targetFormat() MT940
        +engine() PROWIDE
        +export(statement) GeneratedBankingFile
    }
    class InternalToMt942ProwideStrategy {
        +targetFormat() MT942
        +engine() PROWIDE
        +export(statement) GeneratedBankingFile
    }
    class InternalToCamt052ProwideStrategy {
        +targetFormat() CAMT052
        +engine() PROWIDE
        +export(statement) GeneratedBankingFile
    }
    class InternalToCamt053ProwideStrategy {
        +targetFormat() CAMT053
        +engine() PROWIDE
        +export(statement) GeneratedBankingFile
    }

    class InternalToMt940VelocityStrategy {
        +targetFormat() MT940
        +engine() VELOCITY
        +export(statement) GeneratedBankingFile
    }
    class InternalToMt942VelocityStrategy {
        +targetFormat() MT942
        +engine() VELOCITY
        +export(statement) GeneratedBankingFile
    }
    class InternalToCamt052VelocityStrategy {
        +targetFormat() CAMT052
        +engine() VELOCITY
        +export(statement) GeneratedBankingFile
    }
    class InternalToCamt053VelocityStrategy {
        +targetFormat() CAMT053
        +engine() VELOCITY
        +export(statement) GeneratedBankingFile
    }

    StatementExportStrategy <|.. AbstractMtProwideStrategy
    StatementExportStrategy <|.. InternalToCamt052ProwideStrategy
    StatementExportStrategy <|.. InternalToCamt053ProwideStrategy
    StatementExportStrategy <|.. InternalToMt940VelocityStrategy
    StatementExportStrategy <|.. InternalToMt942VelocityStrategy
    StatementExportStrategy <|.. InternalToCamt052VelocityStrategy
    StatementExportStrategy <|.. InternalToCamt053VelocityStrategy
    AbstractMtProwideStrategy <|-- InternalToMt940ProwideStrategy
    AbstractMtProwideStrategy <|-- InternalToMt942ProwideStrategy
    StatementExportStrategyFactory --> StatementExportStrategy

    style StatementExportStrategy         fill:#00838F,stroke:#006064,color:#fff
    style StatementExportStrategyFactory  fill:#00838F,stroke:#006064,color:#fff
    style AbstractMtProwideStrategy       fill:#E65100,stroke:#BF360C,color:#fff
    style InternalToMt940ProwideStrategy  fill:#BF360C,stroke:#7F0000,color:#fff
    style InternalToMt942ProwideStrategy  fill:#BF360C,stroke:#7F0000,color:#fff
    style InternalToCamt052ProwideStrategy fill:#BF360C,stroke:#7F0000,color:#fff
    style InternalToCamt053ProwideStrategy fill:#BF360C,stroke:#7F0000,color:#fff
    style InternalToMt940VelocityStrategy fill:#7B1FA2,stroke:#4A148C,color:#fff
    style InternalToMt942VelocityStrategy fill:#7B1FA2,stroke:#4A148C,color:#fff
    style InternalToCamt052VelocityStrategy fill:#7B1FA2,stroke:#4A148C,color:#fff
    style InternalToCamt053VelocityStrategy fill:#7B1FA2,stroke:#4A148C,color:#fff
